--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="logos-cabecalho">
             <ul class="links">
                 <li class="nav_links">
-                    <a class="nav_alura" target="_blank" href="https://www.alura.com.br/"><img src="/img/logoAlura.png" alt="Logo da Alura"></a>                 
+                    <a class="nav_alura" target="_blank" href="https://www.alura.com.br/"><img src="img/logoAlura.png" alt="Logo da Alura"></a>                 
                 </li>
                 <li class="nav_link">
                     <a class="Link" target="_blank" href="https://www.oracle.com/br/education/oracle-next-education/"><img src="/img/logoOracle.png" alt="Logo da Oracle" ></a> 
