--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a class="nav_alura" target="_blank" href="https://www.alura.com.br/"><img src="img/logoAlura.png" alt="Logo da Alura"></a>                 
                 </li>
                 <li class="nav_link">
-                    <a class="Link" target="_blank" href="https://www.oracle.com/br/education/oracle-next-education/"><img src="/img/logoOracle.png" alt="Logo da Oracle" ></a> 
+                    <a class="Link" target="_blank" href="https://www.oracle.com/br/education/oracle-next-education/"><img src="img/logoOracle.png" alt="Logo da Oracle" ></a> 
                 </li>    
             </ul>   
         </nav>
